chore: Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,30 @@
+# Discord Bot Token
 DISCORD_TOKEN=
+
+# Owner ID
 OWNER_ID=
+
+# Guild ID
 GUILD_ID=
+
+# Channel IDs
 INTRO_CHANNEL_ID=
 RULES_CHANNEL_ID=
 BOT_LOG_CHANNEL_ID=
+YOUTUBE_VIDEOS_CHANNEL_ID=
+
+# Role IDs
 CONTENT_CREATOR_ROLE_ID=
 DEVELOPER_ROLE_ID=
-SUBSCRIBER_ROLE_ID= 
+SUBSCRIBER_ROLE_ID=
 MEMBER_ROLE_ID=
-UNASSIGNED_ROLE_ID= 
-YOUTUBE_PING_ROLE_ID= 
+UNASSIGNED_ROLE_ID=
+YOUTUBE_PING_ROLE_ID=
 ANNOUNCEMENTS_PING_ROLE_ID=
 GIVEAWAY_PING_ROLE_ID=
-RULES_MESSAGE_ID=
-YT_CHANNEL_ID=
 
+# Message IDs
+RULES_MESSAGE_ID=
+
+# YouTube Channel ID
+YT_CHANNEL_ID=
